[package]
name = "psx-shm"
version = "0.1.1"
edition = "2021"
authors = ["Nathan Sizemore <nathanrsizemore@gmail.com>"]
description = "POSIX shared memory wrapper."
readme = "README.md"
keywords = ["posix", "shared", "memory", "ipc", "shm"]
license = "MPL-2.0"
repository = "https://github.com/nathansizemore/psx-shm"
documentation = "https://docs.rs/psx-shm/"

[dependencies]
bitflags = "2.0"
libc = "0.2"
memmap2 = "0.9.5"
